maybe this fixed the mobile clendar?? pt.3 overflow?

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ figure {
   position: relative;
   height: 0;
   padding-bottom: 100%;
-
+  overflow: hidden;
 }
 
 
@@ -127,7 +127,7 @@ figure {
   top: 0;
   left: 0;
   width: 100%;
-
+  height: 100%;
 }
 
 .home-logo {
